# Chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Castle.cpp  Castle.h  Empty.h  Images.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  README.md  main.cpp  q
